--- a/forge-nox-rooms.css
+++ b/forge-nox-rooms.css
@@ -110,3 +110,22 @@
 .fn-room .fn-userlist-list li {
   margin: 2px 0;
 }
+
+.fn-user-entry {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 6px;
+}
+
+.fn-user-name {
+    flex-grow: 1;
+}
+
+.fn-role-badge {
+    width: 18px;
+    height: 18px;
+    margin-left: 6px;
+    object-fit: contain;
+    opacity: 0.95;
+}
